# CPP-Quick-Reporter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
_docs/: file.md  run_commands.md
bench/: bench_pipeline.cpp  bench_tokenizer.cpp
config/: config.toml
data/samples/: bigints.csv  nulls.csv  quoted_edges.csv  simple.csv
docker/: Dockerfile  airflow_csvqr_dag.py  entrypoint.sh
schemas/: dag.schema.json  profile.schema.json  run.schema.json
scripts/: gen_synth_csv.cpp  validate_artifacts.py
src/cli/: cli_options.hpp
src/csv/: csv_count.hpp  record_view.hpp  tokenizer.hpp
src/io/: chunk_reader.hpp  file_stats.hpp
src/main/: main.cpp
src/metrics/: process_stats.hpp  timers.hpp
src/profile/: histogram.hpp  profile.hpp  profiler.hpp
src/report/: emit_dag_json.hpp  emit_profile_json.hpp  emit_run_json.hpp  render_report.hpp
src/types/: infer.hpp  parse_date.hpp
src/util/: json_escape.hpp  nulls.hpp
templates/: report.mustache
templates/assets/: app.css  app.js
templates/vega-lite/: cpu_over_time.json  memory_over_time.json  null_heatmap.json  stage_latencies.json  throughput.json
tests/fixtures/: dag_truth.json  profile_truth.json  run_truth.json
tests/unit/: test_cli.cpp  test_infer.cpp  test_profiler.cpp  test_tokenizer.cpp
